src/snapshots/may_i__cmd_eval__tests__eval_report_render_text_compound.snap
---
source: src/cmd_eval.rs
assertion_line: 805
expression: output
---

Trace

  ─── ? true && curl example.com ───────────────────────────────────────────────

Result

  true&&curl example.com

  → :ask "Test reason"

  config: /test/config.yaml
