src/snapshots/may_i__cmd_eval__tests__eval_report_render_text_single_allow.snap
---
source: src/cmd_eval.rs
assertion_line: 781
expression: output
---

Trace

  ─── ✓ ls ─────────────────────────────────────────────────────────────────────

Result

  ls

  → :allow "Test reason"

  config: /test/config.yaml
