src/snapshots/may_i__cmd_eval__tests__eval_report_render_text_single_ask.snap
---
source: src/cmd_eval.rs
assertion_line: 788
expression: output
---

Trace

  ─── ? sudo apt install ───────────────────────────────────────────────────────

Result

  sudo apt install

  → :ask "Test reason"

  config: /test/config.yaml
