src/snapshots/may_i__cmd_eval__tests__eval_report_render_text_single_deny.snap
---
source: src/cmd_eval.rs
assertion_line: 795
expression: output
---

Trace

  ─── ✗ rm -rf / ───────────────────────────────────────────────────────────────

Result

  rm -rf /

  → :deny "Test reason"

  config: /test/config.yaml
