src/snapshots/may_i__cmd_eval__tests__eval_report_to_json_single.snap
---
source: src/cmd_eval.rs
assertion_line: 813
expression: json_str
---
{
  "decision": "allow",
  "reason": "Test reason",
  "spans": [
    {
      "permission": "allow",
      "text": "ls -la"
    }
  ],
  "trace": [
    {
      "command": "ls -la",
      "decision": "allow",
      "type": "segment_header"
    }
  ]
}
