src/snapshots/may_i__cmd_eval__tests__eval_report_to_json_with_deny.snap
---
source: src/cmd_eval.rs
assertion_line: 829
expression: json_str
---
{
  "decision": "deny",
  "reason": "Test reason",
  "spans": [
    {
      "permission": "deny",
      "text": "rm -rf /"
    }
  ],
  "trace": [
    {
      "command": "rm -rf /",
      "decision": "deny",
      "type": "segment_header"
    }
  ]
}
